profile image prevent stretch

--- a/css/notebook.css
+++ b/css/notebook.css
@@ -127,7 +127,7 @@ section {
     border-radius: 50%;
     height: 70px;
     width: 70px;
-    overflow: hidden;
+    object-fit: cover;
 }
 /*
 .profile-card div {
